--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.23.12",
+    "install": "^0.13.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
@@ -25,7 +26,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11",
-    "vite": "^7.1.2"
+    "tailwindcss": "^3.4.0",
+    "vite": "^5.4.10"
   }
 }
